--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.1",
+    "antd": "^4.13.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.2.3",
