--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.2.3",
     "web-vitals": "^1.0.1"
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.16"
   }
 }
